<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.a00848218.myapplication.MainActivity">


    <EditText
        android:id="@+id/edit_message"
        android:layout_width="239dp"
        android:layout_height="49dp"
        android:hint="Enter a Message"
        android:inputType="textPersonName"
        android:text="Name"
        tools:layout_editor_absoluteY="16dp"
        tools:layout_editor_absoluteX="16dp" />

    <Button
        android:id="@+id/send_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Send"
        android:onClick="sendMessage"
        tools:layout_editor_absoluteY="16dp"
        app:layout_constraintLeft_toRightOf="@+id/edit_message"
        android:layout_marginLeft="8dp" />
</android.support.constraint.ConstraintLayout>
