<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.a00848218.myapplication.MainActivity2">

    <TextView
        android:id="@+id/test_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Goodbye World"
        tools:layout_editor_absoluteY="16dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent" />
</android.support.constraint.ConstraintLayout>
